[gd_scene load_steps=5 format=3 uid="uid://48erot7tt37k"]

[ext_resource type="Script" path="res://scenes/radio_player.gd" id="1_3gs7a"]
[ext_resource type="PackedScene" uid="uid://i5b0lfouov0d" path="res://scenes/interaction_point_except_its_for_the_radio.tscn" id="2_gr1ub"]
[ext_resource type="AudioStream" uid="uid://bb65rbeg01rrv" path="res://audio/environment/radio/Imperial_Rescript_on_the_Termination_of_the_War.ogg" id="3_ldy8k"]
[ext_resource type="AudioStream" uid="uid://2hphcsfw7xeu" path="res://audio/environment/electronics/257879__zmobie__short-wave-radio-noise-2.wav" id="4_4kfno"]

[node name="Radio" type="Node2D"]
z_index = 2
position = Vector2(193, 96)
scale = Vector2(0.02, 0.02)
script = ExtResource("1_3gs7a")

[node name="Interaction point except its for the radio" parent="." instance=ExtResource("2_gr1ub")]
position = Vector2(200, 0)

[node name="RadioVoices" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ldy8k")
autoplay = true
max_distance = 2160.0

[node name="RadioVoiceAndNoise" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_4kfno")
volume_db = -15.0
autoplay = true
max_distance = 2160.0

[connection signal="finished" from="RadioVoices" to="." method="_on_radio_finished"]
